<?xml version="1.0"?>
<package format="2">
  <name>double_follow</name>
  <version>0.0.0</version>
  <description>The double_follow package</description>
  <maintainer email="danielzhang@brandeis.edu">root</maintainer>
  <license>MIT</license>
  <author email="danielzhang@brandeis.edu">Daniel Zhang</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlesim</exec_depend>


  <export>

  </export>
</package>
